src/objects/QPMS__Supplier_Questions__c.object
<CustomObject>
    <description>Includes all Supplier Questions related to the Supplier Checklist.</description>
    <fields>
        <fullName>QPMS__Checklist_Id__c</fullName>
        <description>holds Checklist Id</description>
        <formula>QPMS__Section_Subsection__r.QPMS__Supplier_Checklist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Color__c</fullName>
        <description>holds Color</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Comments__c</fullName>
        <description>holds Comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Comments__c</fullName>
        <description>External Comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Hint__c</fullName>
        <description>holds Hint</description>
        <label>Hint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Order__c</fullName>
        <description>Order</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentRecordId__c</fullName>
        <description>ParentRecordId</description>
        <formula>IF(ISBLANK( QPMS__Section_Subsection__r.QPMS__Supplier_Checklist__r.QPMS__Supplier_Change__c 
),  QPMS__Section_Subsection__r.QPMS__Supplier_Checklist__c ,  QPMS__Section_Subsection__r.QPMS__Supplier_Checklist__r.QPMS__Supplier_Change__c 
)</formula>
        <label>ParentRecordId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Pass_Fail__c</fullName>
        <description>holds the value of Pass/Fail</description>
        <label>Pass/Fail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Question_Group__c</fullName>
        <formula>IF(QPMS__Question_In_Group__c==NULL,&apos;&apos;,QPMS__Question_In_Group__c+&apos;,&apos;)+&apos;&apos;+IF(QPMS__Comment__c==NULL,&apos;&apos;,QPMS__Comment__c+&apos;,&apos;)+TEXT(QPMS__Received_Score__c)+&apos;&apos;+TEXT(QPMS__Pass_Fail__c)+&apos;&apos;+TEXT(QPMS__Color__c)</formula>
        <label>Question Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Question_In_Group__c</fullName>
        <label>Question In Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Question__c</fullName>
        <description>holds Questions</description>
        <label>Question</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Received_Score__c</fullName>
        <description>holds Received Score</description>
        <label>Received Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Score__c</fullName>
        <description>Score</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Section_Subsection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Section Subsection</description>
        <label>Section Subsection</label>
        <referenceTo>QPMS__supplier_Section__c</referenceTo>
        <relationshipLabel>Supplier Questions (Section Subsection)</relationshipLabel>
        <relationshipName>Supplier_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Question__c</fullName>
        <description>Supplier Question</description>
        <label>Supplier Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Supplier Question</label>
    <nameField>
        <displayFormat>SCQ-{0000}</displayFormat>
        <label>Supplier Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>